Fix for reputation overflow

--- a/app/scss/_style.scss
+++ b/app/scss/_style.scss
@@ -1359,6 +1359,12 @@ g {
   margin-left: 28px;
 }
 
+.reputation {
+  & .vault {
+    margin-right: 28px;
+  }
+}
+
 /* Loadout editor */
 
 #loadout-drawer {
